--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -46,11 +46,8 @@
 
         </LinearLayout>
 
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="55dp" />
-
         <LinearLayout
+            android:layout_marginTop="55dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
